--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body {
     background-color: rgba(248, 254, 255, 1);
-    margin-top: 200px;
+    /* border: 3px solid; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
 }
 
 * {
@@ -16,12 +21,14 @@ body {
 div {
     display: flex;
     font-family: Liberation Sans, sans-serif;
-     font-weight: 300;
+    font-weight: 300;
 }
 
 #content {
     flex-direction: column;
+    display: block;
     width: fit-content;
+    top: 50%;
     margin: 0 auto;
 }
 
@@ -38,13 +45,13 @@ div {
     color: rgba(37, 52, 74, 1);
 }
 
-#refresh {
-    color: rgba(37, 52, 74, 1);
-    
+#button {
+    text-decoration: underline;
 }
 
-#refresh:hover {
-    color: red
+#button:hover {
+    color: red;
+    text-decoration: underline;
 }
 
 #coords {
@@ -62,7 +69,7 @@ ul li {
     margin: auto;
 }
 
-.icon {
+.link {
     width: 1.5rem;
     fill: rgba(37, 52, 74, 1);
     stroke: rgba(37, 52, 74, 1);
@@ -71,6 +78,10 @@ ul li {
     stroke-linecap: butt;
     stroke-miterlimit: 4;
     shape-rendering: auto;
+}
+
+.link:hover {
+    color: red
 }
 
 .material-symbols-outlined {
