--- a/style.css
+++ b/style.css
@@ -47,6 +47,12 @@ div {
 
 #button {
     text-decoration: underline;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #button:hover {
